final version of lab

--- a/class-10/lab-a/index.html
+++ b/class-10/lab-a/index.html
@@ -13,7 +13,7 @@
         <div class="nav" id="nav-left">
           <img src="lab-assets/logo.png">
           <ul>
-            <h1>Delicious</h1>
+            <h1 class="cursive">Delicious</h1>
             <h3>THE BEST FOOD BLOG ON THE WEB</h3>
         </ul>
         </div>
